--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@umijs/openapi": "^1.14.1",
     "ant-design-vue": "4.x",
     "axios": "^1.12.2",
+    "file-saver": "^2.0.5",
     "pinia": "^3.0.3",
+    "umi": "^4.5.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.18.6",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
