--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@umijs/openapi": "^1.14.1",
     "ant-design-vue": "4.x",
     "axios": "^1.12.2",
+    "echarts": "^5.4.3",
+    "echarts-wordcloud": "^2.1.0",
     "file-saver": "^2.0.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-cropper": "^1.1.4",
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1",
+    "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
